--- a/CHANGELOG.org
+++ b/CHANGELOG.org
@@ -3,3 +3,6 @@
 
 * 0.1.1.0 -- 2021-11-19
 ** First addition to parsing capability
+
+* 0.1.3.0 -- 2021-11-21
+** Interactive mode is built only table mode remaining
