--- a/CHANGELOG.org
+++ b/CHANGELOG.org
@@ -6,3 +6,6 @@
 
 * 0.1.3.0 -- 2021-11-21
 ** Interactive mode is built only table mode remaining
+
+* 0.1.4.0 -- 2021-11-22
+** Table mode almost complete, bugs to be fixed by the next update
